ADConfig set now writes to file